--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>
-        Hola a todos como estamos? jeje
+        Hola a todos estoy aprendiendo en esta academia
     </p>
 </body>
 </html>
